Another day for errors. Noticed the margin to the left and right are distorted on md screens. working on fix

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,15 @@
   scroll-behavior: smooth
 }
 
+.no-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
+
 @layer base {
   body {
     @apply font-sans text-base;
